# PCB-PR-App

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  basic_dependencies.sh  benchmark.sh  build.sh  clean.sh  create_shared_objs.sh  metric_checker.py  run_layout.py  test_flow.py  ubuntu_install.sh
docs/: Makefile
docs/source/: conf.py  database.rst  index.rst  placer.rst  quickstart.rst  router.rst
examples/: test_flow.py
jenkins/: build.sh  install.sh  test.sh
lib/: PcbDB.py  PcbRouter.py  in
manual_results/: bm10_manual_result.txt  bm11_manual_result.txt  bm12_manual_result.txt  bm13_manual_result.txt  bm1_manual_result.txt  bm2_manual_result.txt  bm3_manual_result.txt  bm4_manual_result.txt  bm5_manual_result.txt  bm6_manual_result.txt  bm7_manual_result.txt  bm8_manual_result.txt  bm9_manual_result.txt
scripts/: OutputGrabber.py  bbbc.py  bbbc_single.py  bm_exp.py  bm_exp.sh  cleanalllam.sh  get_cost.sh  get_initial_cost.py  hamming.py  lipo.py  param_exp.py  plotalllam.sh  route_design.py  run_layout.py  satuning.py  test_rtree.py  variance_exp.py
tests/: DB_loop.py  FL_bm9.py  PL_t0.py  PL_tinf.py  README.txt  RT_line.py  checked.output.bm15.routed.nopower.kicad_pcb  output.bm9.routed.kicad_pcb  placement_test_full_mix.kicad_pcb  regression-py.sh  test_bm.py  test_pr.py  test_router.py  test_ts.py
tests/cache/: output.0.bm9.routed.kicad_pcb
ucsdpcb/: PcbDB.py  PcbRouter.py  bm_paralime.kicad_pcb
util/: check_output.py  checked.output.BBBC2.kicad_pcb  load_bookshelf.py  output.BBBC2.kicad_pcb  plot.py
